--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -12,27 +12,38 @@
     <form class="main-form" name="form" ng-submit="signup.register(form)" novalidate>
 
       <label class="lbl">
-        <input type="text" ng-model="signup.user.firstname" placeholder="First name" ng-class="{'has-success': form.firstname.$valid && signup.submitted, 'has-error': form.firstname.$invalid && signup.submitted}" required/>
-        <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
+        <input type="text" name="firstname" ng-model="signup.user.firstname" placeholder="First name" ng-class="{'has-success': form.firstname.$valid && signup.submitted, 'has-error': form.firstname.$invalid && signup.submitted}" required/>
+        <!--<p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>-->
       </label>
 
       <label class="lbl">
-        <input type="text" ng-model="signup.user.lastname" placeholder="Last name" ng-class="{'has-success': form.lastname.$valid && signup.submitted, 'has-error': form.lastname.$invalid && signup.submitted}" required/>
-        <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
+        <input type="text" name="lastname" ng-model="signup.user.lastname" placeholder="Last name" ng-class="{'has-success': form.lastname.$valid && signup.submitted, 'has-error': form.lastname.$invalid && signup.submitted}" required/>
+        <!--<p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>-->
       </label>
 
-      <label class="lbl" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }">
-        <input type="email" ng-model="signup.user.email"  placeholder="Your email address (.edu required)" ng-pattern="/\.edu$/" required>
-        <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
-        <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
-        <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>
-        <p class="help-block" ng-show="form.email.$error.mongoose" >{{ signup.errors.email }}</p>
+      <label class="lbl">
+        <input type="email" name="email" ng-model="signup.user.email"  placeholder="Your email address (.edu required)" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }" required>
+        <!--<p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>-->
+        <!--<p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>-->
+        <!--<p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>-->
       </label>
 
-      <label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">
-        <input type="password" ng-model="signup.user.password" ng-minlength="3" placeholder="Password" required>
+      <label class="lbl">
+        <input type="password" name="password" ng-model="signup.user.password" ng-minlength="3" placeholder="Password" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }" required>
+        <!--<p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please enter your password</p>-->
+        <!--<p class="help-block" ng-show="form.password.$error.minlength && signup.submitted">Password must be at least 3 characters.</p>-->
       </label>
 
+<div class="top15">
+  <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
+  <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
+  <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
+  <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
+  <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>
+  <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please enter your password</p>
+  <p class="help-block" ng-show="form.password.$error.minlength && signup.submitted">Password must be at least 3 characters.</p>
+  <p class="help-block" ng-show="signup.errors.email">{{ signup.errors.email }}</p>
+</div>
       <!--<label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">-->
         <!--<input type="password" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" ui-validate=" '$value==signup.user.password' "-->
                <!--ui-validate-watch=" 'signup.user.password' " required>-->
