--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -29,7 +29,7 @@
       </label>
 
       <label class="lbl">
-        <input type="password" name="password" ng-model="signup.user.password" ng-minlength="3" placeholder="Password" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }" required>
+        <input type="password" name="password" ng-model="signup.user.password" ng-minlength="8" placeholder="Password (minimum 8 characters)" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }" required>
         <!--<p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please enter your password</p>-->
         <!--<p class="help-block" ng-show="form.password.$error.minlength && signup.submitted">Password must be at least 3 characters.</p>-->
       </label>
@@ -37,11 +37,11 @@
 <div class="top15">
   <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
   <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
-  <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
-  <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
-  <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>
-  <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please enter your password</p>
-  <p class="help-block" ng-show="form.password.$error.minlength && signup.submitted">Password must be at least 3 characters.</p>
+  <p class="help-block" ng-show="form.email.$error.required && signup.submitted">Please enter a valid .edu email address</p>
+  <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Please enter a valid .edu email address</p>
+  <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Please enter a valid .edu email address</p>
+  <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please enter a valid password</p>
+  <p class="help-block" ng-show="form.password.$error.minlength && signup.submitted">Password must be at least 8 characters.</p>
   <p class="help-block" ng-show="signup.errors.email">{{ signup.errors.email }}</p>
 </div>
       <!--<label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">-->
