added flags, prevent user from deleting looking and room

--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -1,6 +1,6 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
-<div class="main-wrapper" ng-if="looking.lookings">
+<div class="main-wrapper">
   <div class="container lookings">
     <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="page-header">
