--- a/client/app/account/pwdreset/pwdreset.html
+++ b/client/app/account/pwdreset/pwdreset.html
@@ -4,7 +4,7 @@
   <div class="container" ng-show="reset.resetStateIs('valid_token')">
     <div class="bs-callout bs-callout-info" >
       <h2>Password reset</h2>
-      <p>You changed succesfully your password.</p>
+      <p>You changed your password successfully.</p>
     </div>
   </div>
 
