--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -30,7 +30,7 @@
               <div class="flipper">
                 <div class="front white-box">
                   <div class="picture safariFix">
-                    <img ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{room.propertyDetails.coords.latitude}},{{room.propertyDetails.coords.longitude}}&zoom=14&size=400x250&markers=color:blue%7C{{room.propertyDetails.coords.latitude}},{{room.propertyDetails.coords.longitude}}">
+                    <img ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{room.propertyDetails.coords.latitude}},{{room.propertyDetails.coords.longitude}}&zoom=14&scale=2&size=400x250&markers=color:blue%7C{{room.propertyDetails.coords.latitude}},{{room.propertyDetails.coords.longitude}}">
                   </div>
                   <div class="info">
                     <strong class="value">
