--- a/client/index.html
+++ b/client/index.html
@@ -114,6 +114,7 @@
           <script src="app/account/confirm/confirm.controller.js"></script>
           <script src="app/account/confirm/confirm.route.js"></script>
           <script src="app/account/login/login.controller.js"></script>
+          <script src="app/account/login/login.route.js"></script>
           <script src="app/account/pwdreset/pwdreset.controller.js"></script>
           <script src="app/account/pwdreset/pwdreset.route.js"></script>
           <script src="app/account/settings/address/add/new.address.controller.js"></script>
