fixing apt data binding in edit profile view, nodemon https switch

--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -137,7 +137,7 @@
               <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly/>
 
             </div>
-
+<pre>{{editProfile.tempAddress|json}}</pre>
             <div class="form-group input-post">
 
               <label for="apt">Apt No.</label>
