--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
-  <section class="login-box white-box">
+  <section class="login-box white-box" ng-show="!pwdResetMailSend">
     <h2 class="heading">Sign In</h2>
 
     <!--<article class="social">-->
@@ -81,4 +81,13 @@
   </form>
 
   </section>
+
+  <!--TODO improve css and wording-->
+  <section class="login-box white-box " style="text-align: center" ng-show="pwdResetMailSend">
+    <h2 class="heading">Password reset in process</h2>
+    <i class="fa fa-unlock-alt fa-5x"></i>
+    <h4>You have requested password reset for your Campusly account. Confirmation link has been sent to {{user.email}}.</h4><br/>
+  </section>
+
+
 </div>
