--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
-  <section class="login-box white-box">
+  <section class="login-box white-box" ng-show="!signup.errors.verification">
     <h2 class="heading">Sign up for free</h2>
 
     <!--<article class="social">-->
@@ -27,17 +27,16 @@
         <input type="password" name="password" ng-model="signup.user.password" ng-minlength="8" placeholder="Password (minimum 8 characters)" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }" required>
       </label>
 
-<div class="top15">
-  <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
-  <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
-  <p class="help-block" ng-show="form.email.$error.required && signup.submitted">Please enter a valid .edu email address</p>
-  <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Please enter a valid .edu email address</p>
-  <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Please enter a valid .edu email address</p>
-  <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please enter a valid password</p>
-  <p class="help-block" ng-show="form.password.$error.minlength && signup.submitted">Password must be at least 8 characters.</p>
-  <p class="help-block" ng-show="signup.errors.email">{{ signup.errors.email }}</p>
-  <p class="help-block" style="font-size: 0.8em" ng-show="signup.errors.verification">{{ signup.errors.verification }}</p>
-</div>
+        <div class="top15">
+          <p class="help-block" ng-show="form.firstname.$error.required && signup.submitted">A first name is required</p>
+          <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
+          <p class="help-block" ng-show="form.email.$error.required && signup.submitted">Please enter a valid .edu email address</p>
+          <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Please enter a valid .edu email address</p>
+          <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Please enter a valid .edu email address</p>
+          <p class="help-block" ng-show="form.password.$error.required && signup.submitted">Please enter a valid password</p>
+          <p class="help-block" ng-show="form.password.$error.minlength && signup.submitted">Password must be at least 8 characters.</p>
+          <p class="help-block" ng-show="signup.errors.email">{{ signup.errors.email }}</p>
+        </div>
       <!--<label class="lbl" ng-class="{ 'has-success': form.password.$valid && signup.submitted, 'has-error': form.password.$invalid && signup.submitted }">-->
         <!--<input type="password" ng-model="signup.user.confirmPassword" match="signup.user.password" placeholder="Repeat password" ng-minlength="3" ui-validate=" '$value==signup.user.password' "-->
                <!--ui-validate-watch=" 'signup.user.password' " required>-->
@@ -54,4 +53,12 @@
 
     </form>
   </section>
+  <!--TODO improve css and wording-->
+  <section class="login-box white-box " style="text-align: center" ng-show="signup.errors.verification">
+    <h2 class="heading">Hello&nbsp{{signup.user.firstname}},</h2>
+    <i class="fa fa-envelope-o fa-5x"></i>
+    <h4>Please verify your Campusly account. Verification mail has been sent to {{signup.user.email}}.</h4><br/>
+    <small class="quote">Once you finish with e-mail verification you'll be able to access campusly community</small>
+  </section>
+
 </div>
