Updated wording for email on sign-up and sign-in. Updated Reset password template

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -86,7 +86,7 @@
   <section class="login-box white-box " style="text-align: center" ng-show="pwdResetMailSend">
     <h2 class="heading">Password reset in process</h2>
     <i class="fa fa-unlock-alt fa-5x"></i>
-    <h4>You have requested password reset for your Campusly account. Confirmation link has been sent to {{user.email}}.</h4><br/>
+    <h4>You have requested to reset your Campusly account password. <br><br>Confirmation link has been sent to {{user.email}}.</h4><br/>
   </section>
 
 
