--- a/client/app/landing/joinrented.html
+++ b/client/app/landing/joinrented.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row  text-center footer-msg">
       <div class="col-sm-12">
-        <h1>Join the rented community</h1>
+        <h1>Join the campusly community</h1>
       </div>
     </div>
     <div class="row text-center lead-btn">
