--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -29,21 +29,29 @@
 
             <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
               <div class="form-group input-post">
-                <label>First Name</label>
+                <label for="firstname">First Name</label>
                 <input class="form-control" type="text" id="firstname" name="firstname" ng-model="editProfile.tempMe.firstname"/>
               </div>
               <div class="form-group input-post">
-                <label>Last Name</label>
+                <label for="lastname">Last Name</label>
                 <input class="form-control" type="text" id="lastname" name="lastname" ng-model="editProfile.tempMe.lastname"/>
               </div>
               <div class="form-group input-post-2">
-                <label>About Me</label>
-                <textarea class="form-control" cols="50" rows="2" ng-model="editProfile.tempMe.aboutMe"></textarea>
+                <label for="aboutMe">About Me</label>
+                <textarea class="form-control" cols="50" rows="2" id="aboutMe" ng-model="editProfile.tempMe.aboutMe"></textarea>
               </div>
               <div class="form-group input-post">
-                <label>Phone Number</label>
+                <label for="phone">Phone Number</label>
                 <input class="form-control" type="text" id="phone" name="phone" ng-model="editProfile.tempMe.phone" ui-mask="999-999-9999">
               </div>
+              <div class="form-group input-post">
+                <label for="facebook">Facebook account</label>
+                  <div class="input-group">
+                    <span class="input-group-addon " style="padding-right: 3px; background-color: white; border-radius: 20px 0 0 20px;">https://www.facebook.com/</span>
+                    <input class="form-control" type="text" id="facebook" name="facebook" ng-model="editProfile.tempMe.facebook" style="padding-left: 3px"/>
+                  </div>
+              </div>
+
             </div>
           </div>
           <input type="submit" class="btn-rented-medium primary pull-right" value="Save">
@@ -137,7 +145,6 @@
               <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly/>
 
             </div>
-<pre>{{editProfile.tempAddress|json}}</pre>
             <div class="form-group input-post">
 
               <label for="apt">Apt No.</label>
